added point counter with browser display

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="imageSize">
         <img id="myImage" src="https://media.istockphoto.com/id/152538687/photo/morning-light.webp?b=1&s=612x612&w=0&k=20&c=GhGgHX6VSAVMDv40JPsRMzv1pY69XfPab602RzEmZss=">
         <aside></aside>
+        <aside class="points-counter">- Easter Egg!<br>** Hover Mouse to Reveal Points Accumulated **</aside>
     </div>
     <div class="name-submission">
         <input type="text" placeholder="        Insert Name Here">
