--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="instructions"></div>
     <div class="buttons"><button id="op1-button">Option 1</button><button id="op2-button">Option 2</button></div>
-    <div class="consequences">The Big Bad Wolf is hunting you down! Enter the magical woods to get him off your trail, but BEWARE of the dangers the lurk in the forest...make your way outside and save yourself!</div>
+    <div class="consequences">The Big Bad Wolf is hunting you down! Enter the magical woods to get him off your trail, but BEWARE of the dangers that lurk in the forest...make your way outside and save yourself!</div>
     <div class="start-reset"><button id="start-button">START/RESET</button></div>
     <div class="imageSize">
         <img id="myImage" src="https://media.istockphoto.com/id/152538687/photo/morning-light.webp?b=1&s=612x612&w=0&k=20&c=GhGgHX6VSAVMDv40JPsRMzv1pY69XfPab602RzEmZss=">
